# api

./: .gitignore  .huskyrc.js  .lintstagedrc.js  .npmrc  CHANGELOG.md  MODEL.md  README.md  WORKSPACE.bazel  go.mod  go.sum  lerna.json  package.json
docs/: typescript.md
docs/examples/: grpc-web-hacker-news.md
event/proto/v1/: event.proto
example/proto/v1/: example.proto
example/swagger/v1/: example.swagger.json
oswee/core/event/proto/v1/: BUILD  event.proto  protoc-gen.sh  service.proto
oswee/core/event/stubs/v1/: BUILD  event.pb.go
oswee/core/kafka/proto/v1/: BUILD  kafka.proto
oswee/event/proto/v1/: service.proto
oswee/example/proto/v1/: BUILD
oswee/identity/signup/proto/v1/: BUILD  protoc-cmd-gen.sh  protoc-gen.sh  protoc-qry-gen.sh  signup.proto  signup_command_api.proto  signup_command_handler.proto  signup_event_handler.proto  signup_projection.proto  signup_query_api.proto
oswee/identity/signup/stubs/v1/: BUILD  signup.pb.go  signup_command_api.pb.go  signup_command_api.pb.gw.go  signup_command_handler.pb.go  signup_event_handler.pb.go  signup_projection.pb.go  signup_query_api.pb.go  signup_query_api.pb.gw.go
oswee/identity/signup/swagger/v1/: signup.swagger.json  signup_command_api.swagger.json  signup_query_api.swagger.json
oswee/module/: BUILD.bazel
oswee/module/proto/v1/: BUILD  module.proto  protoc-gen.sh
oswee/module/stubs/v1/: CHANGELOG.md  README.md  module.pb.go  module_pb.d.ts  module_pb.js  package.json
oswee/module/stubs/v1/ts/: CHANGELOG.md  ModuleServiceClientPb.ts  README.md  module_pb.d.ts  module_pb.js  package.json
oswee/module/swagger/v1/: module.swagger.json
oswee/shipping/orders/proto/: BUILD
oswee/shipping/orders/proto/v1/: BUILD  order.proto  orders_command_api.proto  protoc-gen.sh
oswee/shipping/orders/stubs/v1/: BUILD  order.pb.go  orders_command_api.pb.go
oswee/signup/proto/v1/: command-service.proto  protoc-gen.sh  protoc-qry-gen.sh  query-service.proto  signup.proto
oswee/signup/stubs/v1/: command-service.pb.go  command-service.pb.gw.go  query-service.pb.go  query-service.pb.gw.go
oswee/signup/swagger/v1/: query-service.swagger.json
signup/proto/v1/: protoc-qry-gen.sh  query-service.proto
signup/stubs/v1/: query-service.pb.go  query-service.pb.gw.go
signup/swagger/v1/: command-service.swagger.json  query-service.swagger.json
