load("@rules_proto//proto:defs.bzl", "proto_library")
# load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
# load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")
load("@grpc_ecosystem_grpc_gateway//protoc-gen-swagger:defs.bzl", "protoc_gen_swagger")
load(
    "@com_google_googleapis_imports//:imports.bzl",
)

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "module_proto",
    srcs = [
        "proto/v1/module.proto",
    ],
    deps = [
        "@grpc_ecosystem_grpc_gateway//protoc-gen-swagger/options:annotations_proto",
        "@com_github_googleapis_googleapis//google/api:annotations_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
        # "@com_google_protobuf//:duration_proto",
        # "@com_google_protobuf//:timestamp_proto",
        # "@go_googleapis//google/api:annotations_proto",
    ],
)

protoc_gen_swagger(
    name = "module_protoc_gen_swagger",
    proto = ":module_proto",
)
